# capacities-client-python

./: .env.template  .gitignore  pyproject.toml
.github/workflows/: python-publish.yml
capacities/bot/: telegram.py
capacities_client/: client.py  models.py
examples/: 00_api_usage.py  01_bot_usage.py
